--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section style="min-height: 100vh;">
           <h1>Section 2</h1>
-          <p>This is the second section of the page.</p>
+          <p>This is the 3second section of the page.</p>
         </section>
         <section style="min-height: 100vh;">
           <h1>Section 3</h1>
