--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
           <div class="row h-50">
             <div class="video h-100">
               <video autoplay muted loop id="myVideo" class="lazy" data-src="videos/shasta.mp4">
-                <source class="lazy" data-src="videos/Shaking_hands_Red.mp4" type="video/mp4">
+                <source class="lazy" data-src="videos/shaking.mp4" type="video/mp4">
               </video>
           </div>
           </div>
