--- a/index.html
+++ b/index.html
@@ -1217,6 +1217,7 @@
       }
         </script>
         <script src="https://www.uhadvancement.com/app/digital-library/stories/js/owl.carousel.js"></script>
+        <script src="js/ini-animate.js"></script>
 
         <script>
           const sections = document.querySelectorAll('section');
@@ -1291,27 +1292,6 @@
           count.forEach(function(partyElement) {
             IO.observe(partyElement);
           });
-
-          // start animation for fade
-
-          const animate = entries => {
-            entries.forEach( entry => {
-              const fadeEl = entry.target
-              if ( entry.isIntersecting && ! fadeEl.classList.contains( 'is-visible' ) ) {
-                fadeEl.classList.remove('visually-hidden')
-                fadeEl.classList.add('animate__animated', 'animate__fadeIn')
-                fadeEl.classList.add( 'is-visible' )
-              }
-            } )
-          }
-          
-          const IO2 = new IntersectionObserver( animate, { threshold: .5 } )
-          const party = document.querySelectorAll('.party')
-          
-          party.forEach(function(partyElement) {
-            IO2.observe(partyElement);
-          });
-
 
         </script>
 
