--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <div class="row" style="padding-top: 100px;">
             <div class="">
               <div class="video">
-                <video style="padding-top: 150px;" autoplay muted loop id="myVideo" class="lazy" data-src="videos/Shaking_hands_Red.mp4">
-                  <source class="lazy" data-src="videos/Shaking_hands_Red.mp4" type="video/mp4">
+                <video style="padding-top: 150px;" autoplay muted loop id="myVideo" class="lazy" data-src="videos/shaking.mp4">
+                  <source class="lazy" data-src="videos/shaking.mp4" type="video/mp4">
                 </video>
                 <div class="pt-5 video-text d-flex justify-content-end">
                   <div class="col-md-8">
