--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <body>
       
         <section class="bg-dark" id="1">
-            <div class="row col-md-12">
-                <div class="col-md-3 col-sm lazy" data-bg="images/home_coog.jpg" id="home-l">
+            <div class="row col-md-12 h-100">
+                <div class="col-md-3 col-sm-12 lazy h-100 d-none d-md-block" data-bg="images/home_coog.jpg" id="home-l">
                     
                 </div>
-                <div class="col-md-9 col-sm lazy" data-bg="images/home_paper.jpg" id="home-r">
+                <div class="col-md-9 col-sm-12 lazy h-100" data-bg="images/home_paper.jpg" id="home-r">
                     <div class="" style="padding: 250px 100px; margin-right:auto; margin-left: auto;">
                         <img  class="img-fluid animate__animated animate__delay-1s animate__fadeIn animate__slow lazy" data-src="images/wordmark.png" alt="">
                     </div>
@@ -399,7 +399,7 @@
                   </audio> 
                 </div>
 
-                <div class="visually-hidden animate__delay-point6s party col-md-12 col-lg-4 p-3 d-flex flex-column align-items-center"><img class="lazy img-fluid" data-src="images/oral-2.png" alt=""><p class="pt-5">Megan Ledesma ’18</p>
+                <div class="visually-hidden animate__delay-point6s party col-md-12 col-lg-4 p-2 d-flex flex-column align-items-center"><img class="lazy img-fluid" data-src="images/oral-2.png" alt=""><p class="pt-5">Megan Ledesma ’18</p>
                   <audio class="w-100" controls>
                     <source src="audio/megan.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
