--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col-md-3 col-sm-12 lazy h-100 d-none d-md-block" data-bg="images/home_coog.jpg" id="home-l">
                     
                 </div>
-                <div class="col-md-9 col-sm-12 lazy h-100" data-bg="images/home_paper.jpg" id="home-r">
+                <div class="col-md-9 col-sm-12 lazy h-100 d-flex align-items-center" data-bg="images/home_paper.jpg" id="home-r">
                     <div class="" style="padding: 250px 100px; margin-right:auto; margin-left: auto;">
                         <img  class="img-fluid animate__animated animate__delay-1s animate__fadeIn animate__slow lazy" data-src="images/wordmark.png" alt="">
                     </div>
@@ -210,7 +210,8 @@
 
         </section>
 
-        <section class="bg-light">
+        <section class="bg-light d-flex align-items-center">
+          <div>
           <div class="row coogs-bg lazy" data-bg="images/coogs.png">
             <div class="col-md-3 p-5" style="border-right: 5px dotted white;">
               <h1 class="text-end league text-light">COOGS<br>ON THE<br>ROAD</h1>
@@ -239,6 +240,7 @@
             <div class="col-md-3">
               <img class="party p-3 rounded img-fluid visually-hidden animate__delay-point8s lazy" data-src="images/coogs-4.png" alt="">
             </div>
+          </div>
           </div>
           </div>
         </section>
@@ -326,7 +328,8 @@
            </div>
            </div>
         </section>
-        <section class="book-bg bg-light p-5 lazy" data-bg="images/book-bg.png">
+        <section class="d-flex align-items-center book-bg bg-light p-5 lazy" data-bg="images/book-bg.png">
+          <div>
           <div class="row p-5">
             <div class="d-flex">
             <div class="pe-5"><h1 class="league text-uppercase" color:#908B8B">Book Club</h1></div>
@@ -349,6 +352,7 @@
             <div class="col">
               <img class="lazy visually-hidden animate__delay-point9s party" data-src="images/book-5.png">
             </div>
+          </div>
           </div>
         </section>
 
@@ -418,7 +422,7 @@
             </div>
           </div>
         </section>
-        <section class="bg-light">
+        <section class="bg-light d-flex align-items-center">
           <div style="height: 50px;"></div>
           <div class="row d-flex justify-content-center p-5">
             <div class="col-md-10 p-5"><h1 class="league text-uppercase" style="font-size:70px;">Affiliated Alumni Associations and Networks</h1></div>
@@ -435,7 +439,7 @@
             <div class="col-md-5 p-5"><p class="crimson">Affiliated Alumni Associations are made up of Cougars who share a common bond. These volunteer-led groups create a way for UH alumni to connect based on the college that they attended or shared interest. Each year, these groups provide scholarship support to deserving students as well as participate in various community service-related activities.</p></div>
           </div>
         </section>
-        <section class="bg-light">
+        <section class="d-flex align-items-center bg-light">
           <div class="row">
             <div class="col-md-4 p-5">
               <div class="text-center">
@@ -767,7 +771,8 @@
             <div class="col-md-5 h-100">
               <video class="h-100 w-100 lazy" data-src="videos/ring.mp4" autoplay></video>
             </div>
-            <div class="col-md-7 p-5">
+            <div class="col-md-7 p-5 d-flex align-items-center">
+              <div>
               <div>
                 <h1 class="league text-uppercase" style="color:#c8102e;">Class Ring Ceremony</h1>
                 <p class="crimson">The Class Ring is a time-honored tradition recognized by Cougars worldwide. It represents the UH experience, acknowledging hard work and academic achievement. Each semester, the UH Alumni Association holds the Class Ring Ceremony, allowing students to participate with friends and family. As tradition dictates, all class rings spend the night before the Ring Ceremony at the Houston Zoo, guarded by Shasta, before being handed out to the lucky recipients.</p>
@@ -776,15 +781,18 @@
                 <h1 class="crimson counter">1200+ Participants</h1>
               </div>
             </div>
+            </div>
           </div>
         </section>
 
         <section class="bg-light">
           <div class="row" style="min-height: 100%;">
-            <div class="col-md-6" style="position: relative;">
+            <div class="col-md-6 d-flex align-items-center" style="position: relative;">
+              <div>
               <div class="p-5" style="border-right: 25px solid #707070;">
               <h1 class="league text-uppercase">Class Ring Scholarship</h1>
               <p class="crimson">To allow students who are not able to purchase a class ring due to financial limitations, the UH Alumni Association offers Ring Scholarships. The UH Alumni Association Foundation Student Engagement Committee and the Student Policy Board review hundreds of applications, awarding the scholarship to five deserving students. Congratulations to our 2022 ring scholarship recipients:  Varshini Vakulabharanam (’23), Adam Shaw (’23) and Michaela Grant (’24)</p>
+            </div>
             </div>
             </div>
             <div class="col-md-6 h-100">
@@ -798,7 +806,7 @@
             <div class="col-md-5 h-100">
               <img class="h-100 w-100 lazy" style="object-fit: cover;" data-src="images/cub-1.png">
             </div>
-            <div class="col-md-7" style="position: relative;">
+            <div class="col-md-7 d-flex align-items-center" style="position: relative;">
               <div class="p-5" style="border-left: 25px solid #707070;">
               <h1 class="league text-uppercase">Cub Camp</h1>
               <p class="crimson">At Cub Camp, new Coogs spend three days learning about UH, its traditions, and the on-campus community. This is an opportunity for incoming student to come together as a class, have fun, make friends, and create a successful life at UH and in Houston. UH Association representatives come and discuss the services and resources available from the Alumni Association.</p>
@@ -1132,8 +1140,8 @@
             </div>
             </div>
             <div class="col-md-8 p-5">
-              <div class="col-md-12 d-flex justify-content-center align-items-center text-center py-3">
-                <div class="col-md-6 col-sm-12">
+              <div class="col-md-12 d-flex justify-content-center align-items-center py-3">
+                <div class="col-md-4 col-sm-12">
                   <img data-src="images/mike.png" class="px-5 lazy" alt="">
                 </div>
                 <div class="col-md-6 col-sm-12">
@@ -1146,23 +1154,23 @@
                 
               </div>
 
-              <div class="col-md-12 d-flex align-items-center text-center py-3 row">
-                <div class="col-md-6 col-sm-12"><img data-src="images/nancy.png" class="px-5 lazy" alt=""></div>
+              <div class="col-md-12 d-flex justify-content-center align-items-center py-3 row">
+                <div class="col-md-4 col-sm-12"><img data-src="images/nancy.png" class="px-5 lazy" alt=""></div>
                 <div class="col-md-6 col-sm-12"><p class="crimson">Nancy Vecera Clark (’76), CFRE<br>
                   Director of Legacy Programs 
                   </p>
                 </div>
               </div>
 
-              <div class="col-md-12 d-flex align-items-center text-center py-3 row">
-                <div class="col-md-6 col-sm-12"><img data-src="images/nyoka.png" class="px-5 lazy" alt=""></div>
+              <div class="col-md-12 d-flex justify-content-center align-items-center py-3 row">
+                <div class="col-md-4 col-sm-12"><img data-src="images/nyoka.png" class="px-5 lazy" alt=""></div>
                 <div class="col-md-6 col-sm-12"><p class="crimson">Nyoka Nero<br>
                   Administrative Assistant
                   </p></div>
               </div>
 
-              <div class="col-md-12 d-flex align-items-center text-center py-3 row">
-                <div class="col-md-6 col-sm-12"><img data-src="images/taylor.png" class="px-5 lazy" alt=""></div>
+              <div class="col-md-12 d-flex justify-content-center align-items-center py-3 row">
+                <div class="col-md-4 col-sm-12"><img data-src="images/taylor.png" class="px-5 lazy" alt=""></div>
                 <div class="col-md-6 col-sm-12"><p class="crimson">Taylor Santana-Rouleau (‘16, M.A. ‘17)<br>
                   Program Manager, Affiliated Alumni Associations
                   </p></div>
