--- a/index.html
+++ b/index.html
@@ -491,25 +491,29 @@
             <div class="col-md-7 bg-life lazy" data-bg="images/life-members.png">
               
             </div>
-            <div class="col-md-5 p-5">
+            <div class="col-md-5 p-5 d-flex align-items-center">
+              <div>
               <div class="py-5" style="border-top: 3px dotted #333;"></div>
               <h1 class="league text-uppercase">Our Life Members</h1>
               <p class="crimson">
                 Life Members are a very special part of the UH family. Their dedication, combined with their generous annual support, builds a stronger University and makes a resounding statement of pride.
               </p>
             </div>
+            </div>
           </div>
         </section>
 
         <section class="bg-light">
           <div class="row">
-            <div class="col-md-6 p-5">
+            <div class="col-md-6 p-5 d-flex align-items-center">
+              <div>
               <div class="py-5" style="border-top: 3px dotted #333;"></div>
               <h1 class="crimson fw-bold counter" style="color:#c8102e;">7706</h1>
               <h1 class="crimson fw-bold text-uppercase">Life Members in 2022</h1>
               <p class="crimson">
                 Life Members fuel the Legacy Scholarship that that benefits the children and grandchildren of UH graduates. Over $24,000 was awarded to 16 students in 2022.
               </p>
+            </div>
             </div>
 
             <div class="col-md-6 bg-life-2 lazy" data-bg="images/life-members-2.png">
