--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
           </div>
         </section>
         <section class="bg-light d-flex align-items-center">
+          <div>
           <div style="height: 50px;"></div>
           <div class="row d-flex justify-content-center p-5">
             <div class="col-md-10 p-5"><h1 class="league text-uppercase" style="font-size:70px;">Affiliated Alumni Associations and Networks</h1></div>
@@ -437,6 +438,7 @@
                 Associations</h1>
             </div>
             <div class="col-md-5 p-5"><p class="crimson">Affiliated Alumni Associations are made up of Cougars who share a common bond. These volunteer-led groups create a way for UH alumni to connect based on the college that they attended or shared interest. Each year, these groups provide scholarship support to deserving students as well as participate in various community service-related activities.</p></div>
+          </div>
           </div>
         </section>
         <section class="d-flex align-items-center bg-light">
@@ -749,7 +751,8 @@
           </div>
         </section>
 
-        <section class="bg-light">
+        <section class="bg-light d-flex align-items-center">
+          <div>
           <div class="row">
             <div class="d-flex">
               <img class="col-md-4 lazy" style="object-fit: cover;" data-src="images/drive.png" alt="">
@@ -767,6 +770,7 @@
                 <p class="crimson">We aim to educate students about the resources available to them from the UH Alumni Association so they are ready to go once they graduate. To jump start this process, we host the Senior Decal Drive Thru each spring and fall semester for graduating seniors. Students are greeted by the Alumni Relations team and UH Alumni Association Foundation Board members and given cool UH swag and car decals.</p>
               </div>
             </div>
+          </div>
           </div>
         </section>
 
@@ -819,8 +823,8 @@
           </div>
         </section>
 
-        <section class="bg-light">
-
+        <section class="bg-light d-flex align-items-center">
+          <div>
           <div class="row p-5">
             <h1 class="league text-uppercase" style="color:#c8102e">Commencement</h1>
             <p class="crimson">Every fall and spring semester, UH students transition to the role of an alumnus(a). The UH Alumni Association representatives are available at the various commencement ceremonies to answer any questions about the services and resources available from the Alumni Association.</p>
@@ -838,6 +842,7 @@
             <div class="col-md-3 p-3">
               <img class="img-fluid lazy party visually-hidden animate__delay-point8s" data-src="images/commence-4.png">
             </div>
+          </div>
           </div>
         </section>
 
@@ -900,7 +905,7 @@
           </div>
         </section>
 
-        <section style="background: #c8102e;">
+        <section style="background: #c8102e;" class="d-flex align-items-center">
           <div class="row" style="min-height:100%;">
             <div class="row p-5 bg-light">
               <div class="d-flex justify-content-center col-md col-sm-12 p-3">
