--- a/test.html
+++ b/test.html
@@ -57,9 +57,12 @@
         width: 50px;
       }
     </style>
+    <script type="text/javascript" src="mapdata.js"></script>		
+    <script  type="text/javascript" src="usmap.js"></script>
   </head>
   <body>
     <div class="section-container">
+      <div id="map"></div>
       <div class="section" style="background-color: #FFC0CB;">Section 1</div>
       <div class="section" style="background-color: #FFFF00;">Section 2</div>
       <div class="section" style="background-color: #00FF00;">Section 3</div>
