--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             
             <div class="col-md-8 ps-5">
               <p class="crimson fw-bold text-end counter text-light pe-5"><span>765</span> Participants</p>
-              <p class="crimson text-light" style="font-size: 24px;">UH alumni and friends traveled to support the Cougars at various away athletic events in 2022. During March Madness, UH alumni cheered on the Cougars’ Men’s Hoops as they advanced to the Elite 8 in the NCAA tournament after defeating No. 1 seed Arizona. Hundreds of alumni traveled to San Antonio as the Cougars’ Men’s Hoops faced off against Villanova.              </p>
+              <p class="crimson text-light" style="font-size: 24px;">Wherever the Cougars played, UH alumni were there to rally support. During football season, alumni traveled to Dallas, Annapolis, Lubbock and San Antonio, ending with the trek to Louisiana for the Independence Bowl.  Alumni also cheered on the Cougar’s Men’s Hoops as they advanced to the Sweet 16. The UH Alumni Association held tailgates in Fort Worth, Birmingham and Kansas City. During the NCAA Tournament, fans bid farewell to Jim Nantz (’81) as he announced his last Final Four in Houston.</p>
             </div>
 
             <div style="height:30px;"></div>
@@ -496,18 +496,22 @@
                   
                   <div class="modal-body p-0">
                     <div class="row">
-                      <div class="col-md-6 bg-cougar-yellow p-5 full-height">
+                      <div class="col-md-7 bg-cougar-yellow p-5 full-height row">
                         <h1 class="league text-uppercase" style="color:#707070"><span style="color:#c8102e">Shared Interest</span> ALUMNI ASSOCIATIONS</h1>
-                        <p class="crimson">Asian Alumni Association<br>
-                          Black Alumni Association<br>
-                          CenterPoint Energy Alumni Association<br>
-                          ComDan Alumni Association<br>
-                          Cougar Athletic Alliance<br>
-                          Delta Upsilon Alumni Association<br>
-                          Energy Alumni Association (Formerly OCEAN)<br>
-                          Eta Lambda Alumni Association<br>
-                          Eta Mu Alumni Association<br>
-                          First Generation Alumni Association<br>
+                        <div class="col-md-6 p-1">
+                          <p class="crimson">Asian Alumni Association<br>
+                            Black Alumni Association<br>
+                            CenterPoint Energy Alumni Association<br>
+                            ComDan Alumni Association<br>
+                            Cougar Athletic Alliance<br>
+                            Delta Upsilon Alumni Association<br>
+                            Energy Alumni Association (Formerly OCEAN)<br>
+                            Eta Lambda Alumni Association<br>
+                            Eta Mu Alumni Association
+                          </p>
+                        </div>
+                        <div class="col-md-6 p-1">
+                          <p class="crimson">First Generation Alumni Association<br>
                           Frontier Fiesta Alumni Association<br>
                           Graphic Alumni Partnership<br>
                           Hispanic Alumni Association<br>
@@ -516,8 +520,9 @@
                           Spirit of Houston Alumni Association<br>
                           Tau Kappa Epsilon Alumni Association<br>
                           Young Alumni Council</p>
+                        </div>                          
                       </div>
-                      <div class="col-md-6">
+                      <div class="col-md-5">
                         <div>
                           <img class="img-fluid full-height lazy" data-src="images/share.png" style="object-fit: cover;">
                         </div>
@@ -792,15 +797,14 @@
                 <div class="p-5"><div style="height: 30px;"></div><img data-src="images/gala-banner.png" class="img-fluid lazy"></div>
                 <div class="px-5"><div style="border-top: 3px dotted #c8102e;"></div></div>
                 <div class="p-5">
-                <p class="crimson">Every year, the UH Alumni Association pays tribute to the fastest growing Cougar-owned or operated businesses. 
-                  On February 22, 2022, honorees were recognized at the 
-                  8th Annual Cougar 100 Luncheon held at the Citadel-Houston. During the program, UH alumna, Thasunda Brown-Duckett (’96) discussed the challenges she endured to become the president and chief executive officer of TIAA, a fortune 100 provider of secure investments and outcome-focused investments solutions.</p>
+                <p class="crimson">Each year, the UH Alumni Association pays tribute to the fastest growing Cougar-owned or operated businesses. On February 13, 2023, honorees were recognized at the 9th Annual Cougar 100 Luncheon held at the Bayou City Events Center. During the program, UH alumna, Natara Branch (’98), CEO of Houston Exponential discussed the importance of rising above our challenges to achieve greatness.</p>
+                <p><a  target="_blank" href="https://houstonalumni.com/events/cougar-100-awards-luncheon/">9th Annual Cougar 100 Honoree Listing.</a></p>
                 </div>
               </div>
               <div class="col-md-5 d-flex bg-dark flex-wrap h-100">
-                <img data-src="images/gala-3.png" style="object-fit: cover;" class="lazy img-fluid">
-                <img data-src="images/gala-4.png" style="object-fit: cover;" class="lazy img-fluid">
-                <img data-src="images/gala-5.png" style="object-fit: cover;" class="lazy img-fluid">
+                <img data-src="images/c1001.jpg" style="object-fit: cover;" class="lazy img-fluid">
+                <img data-src="images/c1002.png" style="object-fit: cover;" class="lazy img-fluid">
+                <img data-src="images/c1003.jpg" style="object-fit: cover;" class="lazy img-fluid">
               </div>
             </div>
           </div>
@@ -822,7 +826,8 @@
               <div class="p-5 d-flex align-items-center h-100">
                 <div>
                 <p class="crimson text-light">Cougar 100 members are automatically included in our Cougar Business Network. The Cougar Business Network is an online listing of all Cougar-owned or operated businesses, which helps promote Cougars doing business with Cougars. Last April, the UH Alumni Association hosted a reception for the Cougar Business Network where over 40 participants gathered to connect and exchange business information.</p>
-                <p class="crimson text-light">If you are a Cougar-owned or led business and would like to have your company listed on our alumni platform, CoogsConnect, please join CoogsConnect, and you can control you own listing.</p>
+                <p class="crimson text-light">If you are a Cougar-owned or led business and would like to have your company listed on our alumni platform, <a href="https://coogsconnect.com/" target="_blank">CoogsConnect</a>, please join CoogsConnect, and you can control you own listing.
+                  </p>
                 </div>
               </div>
             </div>
