--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
           </div>
         </section>
 
-        <section class="bg-light d-flex align-items-center">
+        <section class="bg-light d-flex align-items-center overflow-hidden">
           <div>
           <div class="row">
             <div class="d-flex">
@@ -1010,7 +1010,7 @@
           </div>
         </section>
 
-        <section style="background: #c8102e;" class="d-flex align-items-center">
+        <section style="background: #c8102e;" class="d-flex align-items-center overflow-hidden">
           <div class="row" style="min-height:100%;">
             <div class="row p-5 bg-light">
               <div class="d-flex justify-content-center col-md col-sm-12 p-3">
