--- a/index.html
+++ b/index.html
@@ -331,25 +331,28 @@
         <section class="d-flex align-items-center book-bg bg-light p-5 lazy" data-bg="images/book-bg.png">
           <div>
           <div class="row p-5">
-            <div class="d-flex">
-            <div class="pe-5"><h1 class="league text-uppercase" color:#908B8B">Book Club</h1></div>
-            <div class=""><h1 class="crimson counter" style="color:#908B8B"><span style="color:#c8102e">750</span> Members</h1></div>
+            <div class="col-md-4">
+            <h1 class="league text-uppercase" color:#908B8B">Book Club</h1>
+            </div>
+            <div class="col-md-6">
+              <h1 class="crimson counter" style="color:#908B8B"><span style="color:#c8102e">750</span> Members</h1>
             </div>
           </div>
-          <div class="row p-5">
-            <div class="col">
+          
+          <div class=" p-5 d-flex flex-wrap justify-content-center align-items-center">
+            <div class="">
               <img class="lazy visually-hidden animate__delay-point5s party" data-src="images/book-1.png">
             </div>
-            <div class="col">
+            <div class="">
               <img class="lazy visually-hidden animate__delay-point6s party" data-src="images/book-2.png">
             </div>
-            <div class="col">
+            <div class="">
               <img class="lazy visually-hidden animate__delay-point7s party" data-src="images/book-3.png">
             </div>
-            <div class="col">
+            <div class="">
               <img class="lazy visually-hidden animate__delay-point8s party" data-src="images/book-4.png">
             </div>
-            <div class="col">
+            <div class="">
               <img class="lazy visually-hidden animate__delay-point9s party" data-src="images/book-5.png">
             </div>
           </div>
@@ -1254,7 +1257,7 @@
             </div>
             </div>
             <div class="col-md-8 p-5">
-              <div class="col-md-12 d-flex justify-content-center align-items-center py-3">
+              <div class="col-md-12 d-flex justify-content-center align-items-center py-3 row">
                 <div class="col-md-4 col-sm-12">
                   <img data-src="images/mike.png" class="px-5 lazy" alt="">
                 </div>
