--- a/index.html
+++ b/index.html
@@ -428,10 +428,10 @@
         <section class="bg-light d-flex align-items-center">
           <div>
           <div style="height: 50px;"></div>
-          <div class="row d-flex justify-content-center p-5">
+          <div class="row d-flex justify-content-center">
             <div class="col-md-10 p-5"><h1 class="league text-uppercase" style="font-size:70px;">Affiliated Alumni Associations and Networks</h1></div>
           </div>
-            <div class="row d-flex justify-content-center p-5" >
+            <div class="row d-flex justify-content-center" >
               <div class="col-md-10 px-5">
             <div style="border-top: 3px dotted #333"></div>
           </div>
@@ -859,13 +859,13 @@
           </div>
         </section>
 
-        <section class="bg-light d-flex align-items-center overflow-hidden">
+        <section class="bg-light d-flex align-items-center">
           <div>
           <div class="row">
-            <div class="d-flex">
-              <img class="col-md-4 lazy" style="object-fit: cover;" data-src="images/drive.png" alt="">
-              <img class="col-md-4 lazy" style="object-fit: cover;" data-src="images/drive-2.png" alt="">
-              <img class="col-md-4 lazy" style="object-fit: cover;" data-src="images/drive-3.png" alt="">
+            <div class="d-flex overflow-auto">
+              <img class="col-md-4 lazy img-fluid" style="object-fit: cover;" data-src="images/drive.png" alt="">
+              <img class="col-md-4 lazy img-fluid" style="object-fit: cover;" data-src="images/drive-2.png" alt="">
+              <img class="col-md-4 lazy img-fluid" style="object-fit: cover;" data-src="images/drive-3.png" alt="">
             </div>
           </div>
           <div class="row">
@@ -1013,7 +1013,7 @@
           </div>
         </section>
 
-        <section style="background: #c8102e;" class="d-flex align-items-center overflow-hidden">
+        <section style="background: #c8102e;" class="d-flex align-items-center">
           <div class="row" style="min-height:100%;">
             <div class="row p-5 bg-light">
               <div class="d-flex justify-content-center col-md col-sm-12 p-3">
