--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
         <section class="bg-light d-flex align-items-center">
           <div>
           <div class="row coogs-bg lazy" data-bg="images/coogs.png">
-            <div class="col-md-3 p-5" style="border-right: 5px dotted white;">
+            <div class="col-md-3 " style="border-right: 5px dotted white;">
               <h1 class="text-end league text-light">COOGS<br>ON THE<br>ROAD</h1>
             </div>
             
-            <div class="col-md-8 ps-5">
+            <div class="col-md-8 ">
               <p class="crimson fw-bold text-end counter text-light pe-5"><span>765</span> Participants</p>
               <p class="crimson text-light" style="font-size: 24px;">Wherever the Cougars played, UH alumni were there to rally support. During football season, alumni traveled to Dallas, Annapolis, Lubbock and San Antonio, ending with the trek to Louisiana for the Independence Bowl.  Alumni also cheered on the Cougar’s Men’s Hoops as they advanced to the Sweet 16. The UH Alumni Association held tailgates in Fort Worth, Birmingham and Kansas City. During the NCAA Tournament, fans bid farewell to Jim Nantz (’81) as he announced his last Final Four in Houston.</p>
             </div>
@@ -1015,24 +1015,24 @@
 
         <section style="background: #c8102e;" class="d-flex align-items-center">
           <div class="row" style="min-height:100%;">
-            <div class="row p-5 bg-light">
-              <div class="d-flex justify-content-center col-md col-sm-12 p-3">
+            <div class="row bg-light">
+              <div class="d-flex justify-content-center col-md col-sm-12 p-5">
                 <img class="img-fluid lazy party visually-hidden animate__delay-point5s" data-src="images/trad-5.png" alt="">
               </div>
-              <div class="d-flex justify-content-center col-md col-sm-12 p-3">
+              <div class="d-flex justify-content-center col-md col-sm-12 p-5">
                 <img class="img-fluid lazy party visually-hidden animate__delay-point6s" data-src="images/trad-4.png" alt="">
               </div>
-              <div class="d-flex justify-content-center col-md col-sm-12 p-3">
+              <div class="d-flex justify-content-center col-md col-sm-12 p-5">
                 <img class="img-fluid lazy party visually-hidden animate__delay-point7s" data-src="images/trad-3.png" alt="">
               </div>
-              <div class="d-flex justify-content-center col-md col-sm-12 p-3">
+              <div class="d-flex justify-content-center col-md col-sm-12 p-5">
                 <img class="img-fluid lazy party visually-hidden animate__delay-point8s" data-src="images/trad-2.png" alt="">
               </div>
-              <div class="d-flex justify-content-center col-md col-sm-12 p-3">
+              <div class="d-flex justify-content-center col-md col-sm-12 p-5">
                 <img class="img-fluid lazy party visually-hidden animate__delay-point9s" data-src="images/trad-1.png" alt="">
               </div>
             </div>
-            <div class="row p-5" style="background-color: #c8102e;">
+            <div class="row" style="background-color: #c8102e;">
               <div class="col-md-4">
                 <h1 class="league text-uppercase text-light text-end pe-5">Traditions</h1>
               </div>
