--- a/index.html
+++ b/index.html
@@ -628,14 +628,16 @@
           </div>
           
           <div class="horizontal-section bg-secondary end">
-            <div class="col-md-12 p-5 bg-cougar-yellow">
-              <p class="milo">Across the country, 
-                UH Alumni Association’s regional networks connect Cougars to the University 
-                and to each other. Through involvement, alumni build relationships with fellow alumni and participate in community service activities, philanthropy awareness
-                as well as countless networking opportunities.</p>
-            </div>
-            <div id="map">
-              <!--edit this map at https://simplemaps.com/custom/us/9ugEcbFp -->
+            <div class="row">
+              <div class="col-md-3 p-5 bg-cougar-yellow full-height">
+                <p class="milo">Across the country, 
+                  UH Alumni Association’s regional networks connect Cougars to the University 
+                  and to each other. Through involvement, alumni build relationships with fellow alumni and participate in community service activities, philanthropy awareness
+                  as well as countless networking opportunities.</p>
+              </div>
+              <div id="map" class="col-md-9">
+                <!--edit this map at https://simplemaps.com/custom/us/9ugEcbFp -->
+              </div>
             </div>
           </div>
         </section>
